<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My_movie_search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="change">Change</string>
    <string name="return_user">Return</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="add_change">Add/Change</string>
    <string name="activity_main_count">Activity main count</string>
    <string name="zero">0</string>
    <string name="start_name">Start_name</string>
    <string name="Choose_a_photo">Choose a photo</string>
    <string name="scroll">Scroll ◁ - ▷</string>
    <string name="Enter_your_name">Enter your name</string>
    <string name="create_contact">Create contact</string>
    <string name="cancel">Cancel</string>
    <string name="short_description">Short description</string>
    <string name="genre">Genre </string>
    <string name="author">Author</string>
    <string name="name_movie">Name movie</string>

    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="text_hint">Text hint</string>
    <string name="search">Search</string>

    <string name="threads">Threads</string>
    <string name="in_main_thread">In main thread</string>
    <string name="from_thread">From thread %d</string>
    <string name="in_thread">In thread %s</string>
    <string name="calculate_in_thread">Calculate in thread %s</string>
    <string name="my_handler_thread">My_Handler_Thread</string>
    <string name="hello_from_thread_fragment">Hello from ThreadsFragment</string>
    <string name="calculate">Calculate</string>
    <string name="default_number">1</string>
    <string name="calc_in_thread">Calc in thread</string>
    <string name="handler_thread">Handler_Thread</string>
    <string name="service">Service</string>
    <string name="service_broadcast">Service + Broadcast</string>
    <string name="response_empty">Response empty</string>
    <string name="ok">OK</string>
    <string name="unknown_host_exception">Unknown host exception</string>
    <string name="file_not_found_exception">File not found exception</string>
    <string name="malformed_url_exception">Malformed url exception</string>
    <string name="socket_timeout_exception">Socket timeout exception</string>
    <string name="error_intent_empty">Error intent empty</string>
    <string name="server_error">Server error</string>
    <string name="request_error">Request error</string>
    <string name="movie_search">Movie search</string>
    <string name="done">save_and_exit</string>
    <string name="detailing">Detailing</string>
    <string name="settings">settings</string>
    <string name="profession">Profession</string>
    <string name="call">call</string>
    <string name="message">message</string>
    <string name="gallery">gallery</string>
    <string name="enlarge_image">enlarge_image</string>
    <string name="contacts">contacts</string>
    <string name="take_advantage">Take advantage</string>
    <string name="one_try">
        You have 1 attempt left to gain access through the application.\n
        Subsequently,
    </string>
    <string name="change_application_settings">
        you can change the access status through the application settings
    </string>
    <string name="close">Close</string>
    <string name="as_contacts">contacts</string>
    <string name="sms">SMS</string>
    <string name="not_have_access">The application does not have access to </string>
    <string name="contacts_click_continue">
        To display contacts on the screen, the application requires access to contacts
        to gain access press CONTINUE
    </string>
    <string name="sms_click_continue">
        To display SMS on the screen, the application requires access to SMS
        to gain access press CONTINUE
    </string>
    <string name="go_on">CONTINUE</string>
    <string name="cancellation">CANCELLATION</string>
</resources>