<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical">

    <TextView
        android:id="@+id/choose_an_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/Choose_a_photo"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"
        android:text="@string/scroll"
        android:textSize="@dimen/scroll" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" />


    <EditText
        android:id="@+id/folder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:hint="@string/Enter_your_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

</androidx.appcompat.widget.LinearLayoutCompat>
