<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context=".view.details.DetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/iv_movie_detail"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:background="@android:color/transparent"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:gravity="center"
                android:text="@string/name_movie"
                android:textSize="@dimen/text_size_24"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:gravity="center"
                android:text="@string/genre"
                android:textSize="@dimen/text_size_24"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:gravity="center"
                android:text="@string/author"
                android:textSize="@dimen/text_size_24"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:gravity="center"
                android:text="@string/short_description"
                android:textSize="@dimen/text_size_24"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>